2008-01-03  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_specified_value_no_inherit): New function.
	(get_computed_value): New way to get computed value, 
	the |{compute_multiple}| code, is now supported.

	* Parser.pm (top, bottom, left, right): Implemented.

2008-01-03  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Some condition operators were incorrect.  
	The 'border-width' property family is implemented.

2008-01-03  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for the 'margin' and 'padding'
	property families.

2008-01-03  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: 'font-size' support.

	* Cascade.pm (new): Set default value for 'font-size' 
	relative- and absolute- value computations.

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_cascaded_value): "*"-only declaration blocks
	were ignored.

	* Parser.pm (cursor): Implemented.

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (text-align, text-transform, white-space,
	caption-side, table-layout, border-collapse, empty-cells,
	outline-style, text-decoration): Implemented.

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_computed_value): Even when |inherit| is specified
	the value is resolved into the computed value by the |{compute}|
	code to support edge cases not mentioned in the CSS 2.1 spec (see
	<http://suika.fam.cx/gate/2005/sw/inherit>).

2008-01-02  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm (get_computed_value): Resolve initial value referred
	when |inherit| is specified as if it were the specified value.

	* Parser.pm: Some properties were incorrectly marked as
	inherited.
	(background-repeat, background-attachment, font-style,
	font-variant, font-weight, background-image, font-family): Implemented.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s compute function a name.

2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Give |list-style-image|'s parser a name.  Bug fix
	on base URI scalar reference.
