@@ -1,3 +1,12 @@
+2008-01-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* Parser.pm ($default_serializer): Support for
+	the |PERCENTAGE| data type.
+	(padding-top, border-top-width): The parser now
+	refers the parser of the 'margin-top'.
+	(width, height, min-width, min-height, max-width, max-height,
+	vertical-align, line-height): Implemented.
+
 2008-01-03  Wakaba  <wakaba@suika.fam.cx>
 
 	* Cascade.pm (get_specified_value_no_inherit): New function.
